--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 					</div>
 
 					<div id="complexmodeselection0" style="margin-top: 10px; border:2px solid #ccc; border-radius:9px;box-shadow:inset 0 4px 0 0 rgba(0,0,0,0.15); padding: 0px 5px;">
-						<table class="" style="width:100%">
+						<table class="complextable" style="width:100%">
 							<tr class="fr" style="height: 4rem; vertical-align:bottom">
 								<td style="width:38%">						
 									<div style="font-size: 10px; border-bottom: 2px solid rgb(255,210,80); transform:translateX(-7px); padding-left:7px; width: 50px; background: rgba(255,210,80,0.7)">Drug 1</div>
@@ -371,11 +371,25 @@
 									</select>
 								</td>
 							</tr>
+
+							<tr>
+								<td>Concentration</td>
+								<td>
+									<select id="select_prop2dilution" onchange="change_prop2dilution(this.value);">
+										<option value="10" selected>10mg/ml</option>
+										<option value="20">20mg/ml</option>
+										<option value="custom">Custom</option>
+									</select>
+									<div id="custom_prop2dilution" onclick="popup_dilution('prop2dilution','propofol')">
+										<span id="prop2dilution">_</span>mcg/ml
+									</div>
+								</td>
+							</tr>
 						</table>
 					</div>
 					<div id="complexmodeselection1" style="margin-top: 10px;border:2px solid #ccc; border-radius:9px;box-shadow:inset 0 4px 0 0 rgba(0,0,0,0.15); padding: 0px 5px;">
 
-						<table class="" style="width:100%">
+						<table class="complextable" style="width:100%">
 							<tr class="fr" style="height: 4rem; vertical-align:bottom">
 								<td style="width:38%">
 									<div style="font-size: 10px; border-bottom: 2px solid rgb(0,129,255); transform:translateX(-7px); padding-left:7px; width: 50px; background: rgba(0,129,255,0.7)">Drug 2</div>
