--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
 						</div>
 					</div>
 
-					<div id="complexmodeselection0" style="margin-top: 10px; border:2px solid #ccc; border-radius:9px;box-shadow:inset 0 4px 0 0 rgba(0,0,0,0.15); padding: 0px 5px;">
+					<div id="complexmodeselection0" style="margin-top: 10px; border:2px solid #ccc; border-radius:9px;box-shadow:inset 0 4px 0 0 rgba(255,210,80,0.7); padding: 0px 5px;">
 						<table class="complextable" style="width:100%">
-							<tr class="fr" style="height: 4rem; vertical-align:bottom">
+							<tr class="fr" style="height: 3rem; vertical-align:bottom">
 								<td style="width:38%">						
-									<div style="font-size: 10px; border-bottom: 2px solid rgb(255,210,80); transform:translateX(-7px); padding-left:7px; width: 50px; background: rgba(255,210,80,0.7)">Drug 1</div>
+									<div style="font-size: 10px; border-bottom: 2px solid rgb(255,210,80); color:white; font-weight: bold; padding-left:7px; width: 50px; background: rgba(255,210,80,0.7)">Drug 1</div>
 									<div style=" font-size: 20px; font-weight:bold;">PROPOFOL</div></td>
 								<td>
 									<select id="model_propofol">
@@ -387,12 +387,12 @@
 							</tr>
 						</table>
 					</div>
-					<div id="complexmodeselection1" style="margin-top: 10px;border:2px solid #ccc; border-radius:9px;box-shadow:inset 0 4px 0 0 rgba(0,0,0,0.15); padding: 0px 5px;">
+					<div id="complexmodeselection1" style="margin-top: 10px;border:2px solid #ccc; border-radius:9px;box-shadow:inset 0 4px 0 0 rgba(0,129,255,0.7); padding: 0px 5px;">
 
 						<table class="complextable" style="width:100%">
-							<tr class="fr" style="height: 4rem; vertical-align:bottom">
+							<tr class="fr" style="height: 3rem; vertical-align:bottom">
 								<td style="width:38%">
-									<div style="font-size: 10px; border-bottom: 2px solid rgb(0,129,255); transform:translateX(-7px); padding-left:7px; width: 50px; background: rgba(0,129,255,0.7)">Drug 2</div>
+									<div style="font-size: 10px; border-bottom: 2px solid rgb(0,129,255); font-weight:bold;color:white;padding-left:7px; width: 50px; background: rgba(0,129,255,0.7)">Drug 2</div>
 									<div style=" font-size: 20px; font-weight:bold; ">OPIOID</div>
 								</td>
 								<td>
