--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 						<table class="complextable" style="width:100%">
 							<tr class="fr" style="height: 3rem; vertical-align:bottom">
 								<td style="width:38%">						
-									<div style="font-size: 10px; border-bottom: 2px solid rgb(255,210,80); color:white; font-weight: bold; padding-left:7px; width: 50px; background: rgba(255,210,80,0.7)">Drug 1</div>
+									<div style="font-size: 10px; border-bottom: 2px solid rgb(255,210,80); color:black; font-weight: bold; padding-left:7px; width: 50px; background: rgba(255,210,80,0.7)">Drug 1</div>
 									<div style=" font-size: 20px; font-weight:bold;">PROPOFOL</div></td>
 								<td>
 									<select id="model_propofol">
@@ -392,7 +392,7 @@
 						<table class="complextable" style="width:100%">
 							<tr class="fr" style="height: 3rem; vertical-align:bottom">
 								<td style="width:38%">
-									<div style="font-size: 10px; border-bottom: 2px solid rgb(0,129,255); font-weight:bold;color:white;padding-left:7px; width: 50px; background: rgba(0,129,255,0.7)">Drug 2</div>
+									<div style="font-size: 10px; border-bottom: 2px solid rgb(0,129,255); font-weight:bold;color:black; padding-left:7px; width: 50px; background: rgba(0,129,255,0.7)">Drug 2</div>
 									<div style=" font-size: 20px; font-weight:bold; ">OPIOID</div>
 								</td>
 								<td>
