selector and options toggle through touch/click dismiss

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, calculator, terence, luk, propofol, remifentanil, alfentanil, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
     <title>SimTIVA | Free TIVA Simulation App to Simulate Target-Controlled Infusion | Simple TCI Calculator</title>
-	<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>
+	<!--<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>-->
 </head>
 <body class="" id="windowbody">
 		<div id="offlineindicator">
@@ -648,15 +648,15 @@
 					</div>
 				</div>
 				<div id="chartoverlayoptions2" >
-					<div id="chartoverlayoptions2content">
-						<div id="closeoptions2" onclick="togglepopupoptions();">&times;</div>
-						<div id="chartoptionscheckbox2">
-					      <label class="container labeloptionscontainer" style="margin-top:6px; max-width:70%">Auto. concentration scale (y-axis)
-					          <input type="checkbox" onChange="toggleautoconc()" id="isConcAutomatic2" checked><span class="checkmark"></span>
+					<div id="chartoverlayoptions2content" class="optitem">
+						<div id="closeoptions2" class="optitem" onclick="togglepopupoptions();">&times;</div>
+						<div id="chartoptionscheckbox2" class="optitem">
+					      <label class="container labeloptionscontainer optitem" style="margin-top:6px; max-width:70%">Auto. concentration scale (y-axis)
+					          <input type="checkbox" onChange="toggleautoconc()" id="isConcAutomatic2" class="optitem" checked><span class="checkmark optitem"></span>
 					      </label>
-					      <div style="padding-left:32px">
+					      <div style="padding-left:32px" class="optitem">
 					      	Custom max concentration:
-					      	<select id="customconcselect2" style="" onChange="setcustomconc(this.value)">
+					      	<select id="customconcselect2" class="optitem" style="" onChange="setcustomconc(this.value)">
 					      	<option value="15">15mcg/ml</option>
 					      	<option value="14">14mcg/ml</option>
 					      	<option value="13">13mcg/ml</option>
@@ -672,26 +672,26 @@
 					      	<option value="3">3mcg/ml</option>
 					      	</select>
 					      </div>
-					      <label class="container labeloptionscontainer" style="">Auto. time scale (x-axis)
-					          <input type="checkbox" id="isTimeAutomatic2" onChange="toggleautotime();" checked><span class="checkmark"></span>
+					      <label class="container labeloptionscontainer optitem" style="">Auto. time scale (x-axis)
+					          <input type="checkbox" id="isTimeAutomatic2" class="optitem" onChange="toggleautotime();" checked><span class="checkmark optitem"></span>
 					      </label>
 						</div>
-						<div style="padding-left:32px">Custom time range (min):</div>
-						<div id="timerangeslider2">
-							<div id="leftslidercontainer2">
-								<input id="range0copy" value="10" min="0" max="30" step="5" type="range" oninput="processrange(0);">
-								<div class="timerangetext" id="rangetext0copy">0</div>
+						<div style="padding-left:32px" class="optitem">Custom time range (min):</div>
+						<div id="timerangeslider2" class="optitem">
+							<div id="leftslidercontainer2" class="optitem">
+								<input id="range0copy" value="10" min="0" max="30" step="5" type="range" class="optitem" oninput="processrange(0);">
+								<div class="timerangetext optitem" id="rangetext0copy">0</div>
 							</div>
-							<div id="rightslidercontainer2">
-								<input id="range1copy" value="90" min="30" max="120" step="5" type="range" oninput="processrange(1);">
-								<div class="timerangetext" id="rangetext1copy">30</div>
+							<div id="rightslidercontainer2" class="optitem">
+								<input id="range1copy" class="optitem" value="90" min="30" max="120" step="5" type="range" oninput="processrange(1);">
+								<div class="timerangetext optitem" id="rangetext1copy">30</div>
 							</div>		
 						</div>
-						<div style="margin-top:30px" id="PD_options_group2">
-				      <label class="container labeloptionscontainer" style="margin-bottom:0px">PD Effect estimation
-				          <input type="checkbox" id="isEffectEstimationOn2" onChange="if (document.getElementById('isEffectEstimationOn').checked == true) {document.getElementById('isEffectEstimationOn').checked = false} else {document.getElementById('isEffectEstimationOn').checked = true;}toggleEffectEst();" checked><span class="checkmark"></span>
+						<div style="margin-top:30px" id="PD_options_group2" class="optitem">
+				      <label class="container labeloptionscontainer optitem" style="margin-bottom:0px">PD Effect estimation
+				          <input type="checkbox" class="optitem" id="isEffectEstimationOn2" onChange="if (document.getElementById('isEffectEstimationOn').checked == true) {document.getElementById('isEffectEstimationOn').checked = false} else {document.getElementById('isEffectEstimationOn').checked = true;}toggleEffectEst();" checked><span class="checkmark optitem"></span>
 				      </label>
-				      <select id="select_effect_measure2" style="margin-left:32px;width:calc(100% - 30px)" onChange="document.getElementById('select_effect_measure').value=document.getElementById('select_effect_measure2').value;toggleEffectEst();">
+				      <select id="select_effect_measure2" class="optitem" style="margin-left:32px;width:calc(100% - 30px)" onChange="document.getElementById('select_effect_measure').value=document.getElementById('select_effect_measure2').value;toggleEffectEst();">
 				      	<option value="bis">BIS 40-60</option>
 				      	<option value="ptol">PTOL 50-90</option>
 				      	<option value="nsri">NSRI 20-50</option>
@@ -810,7 +810,6 @@
 			<div style="font-weight:bold; letter-spacing:2px; font-stretch:110%; text-shadow:1px 1px 2px #0005">SimTIVA <span style="opacity:0.3">| Terence Luk 2025</span></div>
 		</div>
 	</div><!--bodywrapper-->
-	
 	<script src="main.js"></script>
 	<script src="pharmacology.js" defer></script>
 	<script src="index.js" defer></script>
