--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, calculator, terence, luk, propofol, remifentanil, alfentanil, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
     <title>SimTIVA | Free TIVA Simulation App to Simulate Target-Controlled Infusion | Simple TCI Calculator</title>
-	<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>
+	<!--<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>-->
 </head>
 <body class="" id="windowbody">
 		<div id="offlineindicator">
@@ -142,6 +142,7 @@
 									<option value="Shafer">Fentanyl (Shafer)</option>
 									<option value="Hannivoort">Dexmedetomidine (Hannivoort)</option>
 									<option value="Kamp">Ketamine (Kamp)</option>
+									<option value="Domino">Ketamine (Domino)</option>
 									<option value="Complex">Complex (Dual mode)</option>
 								
 							</select>
