PKPD ketamine,dex,paedfusor

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 									<option value="Maitre">Alfentanil (Maitre)</option>
 									<option value="Shafer">Fentanyl (Shafer)</option>
 									<option value="Hannivoort">Dexmedetomidine (Hannivoort)</option>
+									<option value="Dyck">Dexmedetomidine (Dyck)</option>
 									<option value="Kamp">Ketamine (Kamp)</option>
 									<option value="Domino">Ketamine (Domino)</option>
 									<option value="Complex">Complex (Dual mode)</option>
