--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, calculator, terence, luk, propofol, remifentanil, alfentanil, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
     <title>SimTIVA | Free TIVA Simulation App to Simulate Target-Controlled Infusion | Simple TCI Calculator</title>
-	<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>
+	<!--<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>-->
 </head>
 <body class="" id="windowbody">
 		<div id="offlineindicator">
@@ -542,7 +542,11 @@
             <a href="#" onclick="setmodal('modalReset'); togglemenu();">Reload</a>
             <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();">Documentation</a>
             <a href="#" onclick="sharefunction(); togglemenu();">Share</a>
-            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" >Contact</a>            
+            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" >Contact</a>
+            <div class="" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>     
+            <div class="" id="darkmodebutton" onclick="goDark();">
+			<i class="fas fa-moon fa-fw"></i>
+		</div>       
         </div>
         <!--end of menucontent-->
         <div class="social">
@@ -798,13 +802,6 @@
 		</div>
 
 		</div><!--controlpanel-->
-		<div id="cornerblock" style="">
-			<div style="" id="cornerblock2">
-				<div id="cornermessage"></div>
-				<div class="cornericon" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>
-				<div class="cornericon" id="darkmodebutton" onclick="goDark();"><i class="fas fa-moon fa-fw"></i></div>
-			</div>
-		</div>
 		<div class="suspendbanner" id="suspendBanner">
 			<div style="padding-top:20px;font-weight:bold;color:white">Simulation is suspended.</div>
 		</div>
