--- a/index.html
+++ b/index.html
@@ -543,11 +543,9 @@
             <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();">Documentation</a>
             <a href="#" onclick="sharefunction(); togglemenu();">Share</a>
             <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" >Contact</a>
-            <div class="" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>     
-            <div class="" id="darkmodebutton" onclick="goDark();">
-			<i class="fas fa-moon fa-fw"></i>
 		</div>       
-        </div>
+        
+
         <!--end of menucontent-->
         <div class="social">
         </div>
@@ -816,6 +814,12 @@
 					<div id="warningbuttondiv"><a class="button muted" id="warningbutton" onclick="">Yes</a>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div id="footerdiv">
+			<div id="footerdivright">
+				<div class="" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>     
+				<div class="" id="darkmodebutton" onclick="goDark();"><i class="fas fa-moon fa-fw"></i></div>
 			</div>
 		</div>
 		<div id="logo2" style="">
