fix theme color2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="preload" href="styles-extra.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="preload" href="css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
 	<link rel="preload" href="css/solid.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<meta name="theme-color" content="#7B8092">
+	<meta name="theme-color" content="#000000">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 	<link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png" />
