--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, calculator, terence, luk, propofol, remifentanil, alfentanil, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
     <title>SimTIVA | Free TIVA Simulation App to Simulate Target-Controlled Infusion | Simple TCI Calculator</title>
-	<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>
+	<!--<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>-->
 </head>
 <body class="" id="windowbody">
 		<div id="offlineindicator">
@@ -66,7 +66,7 @@
 			<a class="button frontpage"  onclick="displayModalOptions();">
 			<svg class="iconsvg sliders" viewBox="0 0 512 512"><path d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"/></svg>
 			Options</a>
-			<a class="button frontpage"  onclick="rescue();">
+			<a class="button frontpage"  onclick="rescue();jumpLoad();">
 			<svg class="iconsvg life-ring" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm173.7 119.6l-63.4 63.4c-11-18.6-26.7-34.3-45.3-45.3l63.4-63.4a218.4 218.4 0 0 1 45.3 45.3zM256 352c-53 0-96-43-96-96s43-96 96-96 96 43 96 96-43 96-96 96zM127.6 82.3l63.4 63.4c-18.6 11-34.3 26.7-45.3 45.3l-63.4-63.4a218.4 218.4 0 0 1 45.3-45.3zM82.3 384.4l63.4-63.4c11 18.6 26.7 34.3 45.3 45.3l-63.4 63.4a218.4 218.4 0 0 1 -45.3-45.3zm302.1 45.3l-63.4-63.4c18.6-11 34.3-26.7 45.3-45.3l63.4 63.4a218.4 218.4 0 0 1 -45.3 45.3z"/></svg>
 			Rescue</a>
 			<a class="button frontpage"  onclick="load();">
@@ -511,7 +511,7 @@
 						<div style="height:30px"></div>
 					</div>
 					<div id="modalLoadNormalButtons">
-						<a class="button wide invert" id="btn_load" onclick="init_rescue(selected_uid);">Load Selection</a>
+						<a class="button wide invert" id="btn_load" onclick="init_rescue(selected_uid);jumpLoad();">Load Selection</a>
 						<a class="button muted right" onclick="toPageOneFromLoad();">Back</a>
 						<a class="button muted right" id="btn_manageFiles" onclick="manageFileList();">Manage</a>
 						<div><a class="button hide" id="btn_export" onclick="exportFunction()">Export all</a></div>
