--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 						<div><a class="button hide" id="btn_export" onclick="exportFunction()">Export all</a></div>
 					</div>
 					<div id="modalLoadImportButtons">
-						<a class="button wide invert disabled" id="btn_load_import" onclick="init_rescue(selected_uid,true)">Load Selection</a> &nbsp;
+						<a class="button wide invert disabled" id="btn_load_import" onclick="init_rescue(selected_uid,true);jumpLoad();">Load Selection</a> &nbsp;
 						<a class="button muted right" onclick="toPageOneFromLoad();">Back</a>
 					</div>
 				</div>
