--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, calculator, terence, luk, propofol, remifentanil, alfentanil, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
     <title>SimTIVA | Free TIVA Simulation App to Simulate Target-Controlled Infusion | Simple TCI Calculator</title>
-	<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>
+	<!--<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>-->
 </head>
 <body class="" id="windowbody">
 		<div id="offlineindicator">
@@ -802,6 +802,9 @@
 		</div><!--controlpanel-->
 		<div class="suspendbanner" id="suspendBanner">
 			<div style="padding-top:20px;font-weight:bold;color:white">Simulation is suspended.</div>
+		</div>
+		<div class="blackbanner" id="blackBanner">
+			<div></div>
 		</div>
 		<div class="warningbanner" id="warningBanner">
 			<div class="warningbanner_left">
