fix dim and menu

--- a/index.html
+++ b/index.html
@@ -537,11 +537,11 @@
 		--><div id="parallax3" style="opacity:0"></div>
     <div class="menuwrapper" id="menu">
         <div class="menucontent">
-            <a href="#" onclick="displayAbout2(0); togglemenu();">About</a>
-            <a href="#" onclick="displayAbout2(); togglemenu();" >Help</a>
-            <a href="#" onclick="setmodal('modalReset'); togglemenu();">Reload</a>
-            <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();">Documentation</a>
-            <a href="#" onclick="sharefunction(); togglemenu();">Share</a>
+            <a href="#" onclick="togglemenu();displayAbout2(0);">About</a>
+            <a href="#" onclick="togglemenu();displayAbout2();" >Help</a>
+            <a href="#" onclick="togglemenu();setmodal('modalReset');">Reload</a>
+            <a href="#" onclick="togglemenu();setmodal('modalDocumentation');">Documentation</a>
+            <a href="#" onclick="togglemenu();sharefunction();">Share</a>
             <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" >Contact</a>
 		</div>       
         
