--- a/index.html
+++ b/index.html
@@ -279,6 +279,12 @@
 						Help</a>
 					</div>
 
+					<div style="margin: 10px 0; background: #eee; padding:10px 0">
+				      <label class="container" style="">Infusulator / Research mode
+				          <input type="checkbox" onChange="" id="TSmodebox" class="" ><span class="checkmark"></span>
+				      </label>
+					</div>
+
 			</div>
 		</div>
 	</div>
