--- a/view.html
+++ b/view.html
@@ -1311,11 +1311,10 @@
 		</div>
 
 		</div><!--controlpanel-->
-		<div id="cornerblock" style="">
-			<div style="" id="cornerblock2">
-				<div id="cornermessage"></div>
-				<div class="cornericon" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>
-				<div class="cornericon" id="darkmodebutton" onclick="goDark();"><i class="fas fa-moon fa-fw"></i></div>
+		<div id="footerdiv">
+			<div id="footerdivright">
+				<div class="" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>     
+				<div class="" id="darkmodebutton" onclick="goDark();"><i class="fas fa-moon fa-fw"></i></div>
 			</div>
 		</div>
 		<div id="logo2" style="">
