--- a/index.html
+++ b/index.html
@@ -827,14 +827,15 @@
 				</div>
 			</div>
 		</div>
-		<div id="footerdiv">
+		<div id="footerdiv" style="">
+			<div id="footerdivleft"></div>
 			<div id="footerdivright">
 				<div class="" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>     
 				<div class="" id="darkmodebutton" onclick="goDark();"><i class="fas fa-moon fa-fw"></i></div>
 			</div>
 		</div>
-		<div id="logo2" style="">
-			<div style="font-weight:bold; letter-spacing:2px; font-stretch:110%; text-shadow:1px 1px 2px #0005">SimTIVA <span style="opacity:0.3">| Terence Luk 2025</span></div>
+		<div id="logo2" style="display:none">
+			<div style="font-weight:bold; letter-spacing:2px; font-stretch:110%; text-shadow:1px 1px 2px #0005">SimTIVA</div>
 		</div>
 	</div><!--bodywrapper-->
 	<script src="main.js"></script>
